--- a/app/views/index.html
+++ b/app/views/index.html
@@ -14,7 +14,7 @@
         <span class="govuk-caption-xl">{{releaseVersion}}</span>
       </h1>{{releaseVersion | log }}
       <p>
-        This kit lets you rapidly create HTML prototypes of GOV.UK services.
+        This kit lets you rapidly create HTML prototypes of GOV.UK services. This branch now has updates. This branch will now have more updates.
       </p>
 
       <p>
